feat(role): add role headler
